--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "guest",
   "version": "0.1.0",
   "description": "a guestbook",
+  "repository": "https://github.com/d-rh/guest",
   "main": "./server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
