--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9",
     "pug": "^2.0.3",
     "sqlite3": "^4.0.2"
   }
