--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
+    "morgan": "^1.9.0",
     "pug": "^2.0.3",
     "sqlite3": "^4.0.2"
   }
