--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.1.0",
   "description": "a guestbook",
   "repository": "https://github.com/d-rh/guest",
-  "main": "./server/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "init-db": "sqlite3 ./db/guestbook.db < ./db/schema.sql"
-  },
+  "main": "./index.js",
   "author": "derek hammitt",
   "license": "ISC",
   "dependencies": {
