--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
-    "pug": "^2.0.3",
-    "sqlite3": "^4.0.2"
+    "pug": "^2.0.3"
   }
 }
