--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.4",
     "pug": "^2.0.3"
   }
 }
