--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "@material-ui/core": "^1.3.0",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-jss": "^8.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
