--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "guest",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "a guestbook",
   "repository": "https://github.com/d-rh/guest",
   "main": "./app.js",
   "author": "derek hammitt",
   "license": "ISC",
-  "scripts": {
-    "build": "next build",
-    "start": "next start",
-    "dev": "next"
-  },
   "dependencies": {
-    "@material-ui/core": "^1.3.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
@@ -21,15 +15,12 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.3",
-    "mongoose": "^5.2.13",
+    "mongoose": "^5.2.8",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-jss": "^8.6.0"
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
