--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "jasmine": "^3.2.0"
   }
 }
