--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "main": "./app/app.js",
   "author": "derek hammitt",
   "license": "ISC",
+  "scripts": {
+    "test-init": "./node_modules/jasmine/bin/jasmine.js init",
+    "test": "./node_modules/jasmine/bin/jasmine.js"
+  },
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
