--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "scripts": {
     "test-init": "./node_modules/jasmine/bin/jasmine.js init",
-    "test": "./node_modules/jasmine/bin/jasmine.js"
+    "test": "./node_modules/jasmine/bin/jasmine.js",
+    "sass-watch":  "sass --watch app/sass:public/stylesheets"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
