--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "jasmine": "^3.2.0"
+    "jasmine": "^3.2.0",
+    "request": "^2.88.0"
   }
 }
