--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bulma": "^0.7.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.10",
