--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test-init": "./node_modules/jasmine/bin/jasmine.js init",
     "test": "./node_modules/jasmine/bin/jasmine.js",
-    "sass-watch": "sass --watch app/sass:public/stylesheets",
+    "sass-watch": "sass --watch app/index.scss:public/stylesheets/",
     "start": "nodemon run start"
   },
   "dependencies": {
